bdr.BDR.scala.error
Compilation error:
BDR:4: error: value update is not a member of String
    if (litMessage()=R){
        ^BDR:4: error: not found: value R
    if (litMessage()=R){
                     ^BDR:8: error: value update is not a member of String
    if (litMessage()=L) {
        ^BDR:8: error: not found: value L
    if (litMessage()=L) {
                     ^BDR:12: error: value update is not a member of String
    if (litMessage()="I") {
        ^BDR:16: error: value update is not a member of String
    if (litMessage()="A") {
        ^BDR:19: error: value update is not a member of String
    if (litMessage()="B") {
        ^BDR:22: error: value update is not a member of String
    if (litMessage()="C") {
        ^BDR:25: error: value update is not a member of String
    if (litMessage()="Z") {
        ^BDR:28: error: value update is not a member of String
    if (litMessage()="Y") {
        ^BDR:31: error: value update is not a member of String
    if (litMessage()="X") {
        ^